# meander

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  DISCLAIMER.md  README.md  RELEASE_NOTES.md  build-linux.sh  build-windows.ps1  build.sh  run-all-cpp-tests.sh  run-all-tests.sh  sign.sh  vcpkg.json
.claude/commands/: new-browser-service.md  new-cpp-service.md
.github/workflows/: meander-linux.yml  meander-macos.yml  release-meander-linux.yml  release-meander-windows.yml  release-meander.yml  run-all-tests.yml  warm-vcpkg-cache.yml
docs/: index.html  package-lock.json  package.json  vite.config.ts
docs/content/: introduction.md
docs/src/: App.tsx  index.css
hkp-frontend/: .eslintrc.cjs  .gitignore  README.md  SERVICE_UI_TESTS.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig-lib.json  tsconfig.json  updateBuildNumber.mjs  vite.config-lib.ts  vite.config.ts  vitest.config.ts
hkp-frontend/app/: globals.css
hkp-frontend/boards/: aggregator-demo-board.json  animate-board.json  ascii-art-demo-board.json  ascii-cam-board.json  audiolize-board.json  batcher-demo-board.json  buffer-demo-board.json  cache-demo-board.json  camera-demo-board.json  canvas-demo-board.json  debounce-demo-board.json  decrypt-demo-board.json  delay-demo-board.json  dropitapp-board.json  encode-demo-board.json  encrypt-board.json  encrypt-demo-board.json  fetcher-demo-board.json  fft-demo-board.json  filter-demo-board.json  flat-map-demo-board.json  game-board.json  game-of-life-board.json  game-of-life-demo-board.json  group-by-demo-board.json  hacker-demo-board.json  hash-demo-board.json  helloworld-board.json  image-picker-demo-board.json  imap-email-demo-board.json  injector-demo-board.json  limit-demo-board.json  link-debugger.json  local-storage-demo-board.json  lz-compress-demo-board.json  map-demo-board.json  match-filter-demo-board.json  microphone-monitor-demo-board.json  monitor-demo-board.json  noise-alert-board.json  (+24 more)
hkp-frontend/docs/: server.cjs
hkp-frontend/lib/: lib.css  main.ts
hkp-frontend/public/: manifest.json
hkp-frontend/src/: App.tsx  AppContext.tsx  BoardContext.tsx  DragContext.tsx  Import.jsx  Join.jsx  MessageDispatcher.jsx  MessageDispatcher.tsx  MessageReceiver.jsx  MessageReceiver.tsx  Notifications.tsx  PeersContext.tsx  Routes.jsx  (+16 more)
hkp-rt/: CLAUDE.md  CMakeLists.txt  run-tests.sh
hkp-rt/config/: back_both_local.json  back_ws_local.json  both_rt.json  consumer_rt.json  murea_pro_server.json  producer_rt.json
hkp-rt/exe/: CMakeLists.txt  main.cpp
hkp-rt/lib/: CMakeLists.txt
hkp-rt/lib/hkp-bundles/: CMakeLists.txt  plugin_register.cpp
hkp-rt/lib/include/: app.h  registry.h  server.h  service.h
hkp-rt/lib/include/types/: audio.h  data.h  message.h  models.h  owns_me.h  ringbuffer.h  types.h  validation.h
hkp-rt/lib/src/: app.cpp  common.h  process_context.h  registry.cpp  runtime.cpp  runtime.h  runtime_host.h  service.cpp  sub_runtime.cpp  sub_runtime.h  uuid.h
hkp-rt/lib/src/common/: inja.h  string_util.h  websocket_client_session.cpp  websocket_client_session.h  websocket_config.h  websocket_protocol.h  websocket_server.cpp  websocket_server.h  websocket_server_listener.cpp  websocket_server_listener.h  websocket_server_session.cpp  websocket_server_session.h
hkp-rt/lib/src/http/: server.cpp
hkp-rt/lib/src/services/: buffer_service.h  cache.h  cache_subservices.h  core_audio.cpp  core_audio.h  core_input.h  core_output.h  fft_service.h  filesystem.h  filter.h  http_client.cpp  http_client.h  http_client_impl.h  http_client_template_examples.md  if_service.h  ifft_service.h  map.h  method_router.h  monitor.h  mp4_to_wav.cpp  mp4_to_wav.h  receiver_session.h  root_certificates.h  sha256_openssl.h  static.cpp  static.h  sub_service.h  timer.h  transient_detector.h  transient_detector_gpt.h  transient_detector_rosa.h  wav_reader.h  websocket_client_service.h  websocket_reader.h  websocket_server_service.h  websocket_writer.cpp  websocket_writer.h  writer_session.cpp  writer_session.h
hkp-rt/lib/src/services/ffmpeg/: detail.cpp  detail.h  ffmpeg.cpp  ffmpeg.h  types.h
hkp-rt/lib/src/services/http_server/: http_listener.cpp  http_listener.h  http_server.cpp  http_server.h  http_server_impl.cpp  http_server_impl.h  http_server_subservices.cpp  http_server_subservices.h  http_session.cpp  http_session.h  request_handler.h
hkp-rt/lib/src/services/peer_server/: peer_registry.cpp  peer_registry.h  peer_server.h  peer_server_listener.cpp  peer_server_listener.h  peer_server_session.cpp  peer_server_session.h  peer_ws_session.cpp  peer_ws_session.h
hkp-rt/lib/src/services/pro54/: patches.h  patches.js  patchnames.h  patchnamesOrig.json  pro54.h  pro54_service.cpp  pro54_service.h  pro54main.cpp
hkp-rt/lib/src/types/: data.cpp  message.cpp  models.cpp  ringbuffer.cpp
hkp-rt/tests/: CMakeLists.txt  runtime_validation.test.cpp  service_base.test.cpp  service_cache.test.cpp  service_filter.test.cpp  service_map.test.cpp  service_static.test.cpp  service_sub_service.test.cpp
hkp-saucer/: CMakeLists.txt  README.md  hkp.icns  makeIconset.sh
meander/: CMakeLists.txt  hkp-saucer.entitlements  hkp.icns  make_icon.sh
meander-ios/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
meander-ios/MeanderIOS.xcodeproj/: project.pbxproj
meander-ios/MeanderIOS.xcodeproj/xcshareddata/xcschemes/: MeanderIOS.xcscheme
meander-ios/MeanderIOS/App/: MeanderIOS-Bridging-Header.h  MeanderIOSApp.swift
meander-ios/MeanderIOS/Features/Boards/: BoardListView.swift  BoardListViewModel.swift
meander-ios/MeanderIOS/Models/: BoardDraft.swift  Remote.swift
meander-ios/MeanderIOS/Networking/: MeanderAPIClient.swift
meander-ios/MeanderIOS/Resources/: Info.plist
meander-ios/MeanderIOS/Resources/WebApp/: index.html
meander-ios/MeanderIOS/Resources/WebApp/assets/: editor.worker-C1oXrgE3.js  index-Cux8x48r.js  index-DmmpRhmb.css  json.worker-Y27scj6U.js  jsonMode-CTN9JCji.js  tsMode-vdS8eA00.js
meander-ios/MeanderIOS/Runtime/: HKPRuntimeHost.h  HKPRuntimeHost.mm
scripts/: sign-windows.ps1
(+928 files in other folders)
